--- a/lyc.html
+++ b/lyc.html
@@ -3,6 +3,36 @@
 <head>
 
 <title>wangzherongyao</title>
+<style>
+body{
+  font-family:"Helvetirial setif;
+  color:#333;
+  background-color:#ccc;
+  margin:lem 10%;
+}
+hl{
+  color:#333;
+  background-color:transparent;
+}
+a{
+  color:#c60;
+  background-color:transparent;
+  font-weight:bold;
+  text-decoration:none;
+}
+ul{
+  padding:0;
+}
+li{
+  float :left;
+  padding: 1em;
+  list-style:none;
+}
+img{
+  display:block;
+  clear:both;
+}
+</style>
 </head>
 <body>
 <h1>Snapshots</h1>
@@ -18,6 +48,7 @@
   </li>
  </ul>
 <img id="placeholder" src="王者荣耀.jpg" alt="my image gallery">
-<script src="javacript.js"></script>
+<script src="javacript.js"></script> 
+<p id="description">Choose an image.</p>
 </body>
 </html>
