--- a/lyc.html
+++ b/lyc.html
@@ -38,13 +38,13 @@ img{
 <h1>Snapshots</h1>
  <ul>
   <li>
-    <a href="李白.jpg" title="李白" onclick="showpic(this); return false;">libai</a>
+    <a href="李白.jpg" title="李白" onclick="showPic(this); return false;">libai</a>
   </li>
-  <li><a href="露娜.jpg".jpg" title="露娜" onclick="showpic(this); return false;">luna</a>
+  <li><a href="露娜.jpg".jpg" title="露娜" onclick="showPic(this); return false;">luna</a>
   </li>
-  <li><a href="张良.jpg" title="张良" onclick="showpic(this); return false;">zhangliang</a>
+  <li><a href="张良.jpg" title="张良" onclick="showPic(this); return false;">zhangliang</a>
   </li>
-  <li><a href="钟馗.jpg" title="钟馗" onclick="showpic(this); return false;">zhongkui</a>
+  <li><a href="钟馗.jpg" title="钟馗" onclick="showPic(this); return false;">zhongkui</a>
   </li>
  </ul>
 <img id="placeholder" src="王者荣耀.jpg" alt="my image gallery">
