--- a/lyczy.html
+++ b/lyczy.html
@@ -2,4 +2,4 @@
 onclick="popUp(this.href); return false;">Snapshots</a>
 <br/>
 <a href="https://lyc201601530308.github.io/lyc/16lyc.html"
-onclick="popUp(this.href); return false;">╣знЕуб</a>
+onclick="popUp(this.href); return false;">Г╛╛Д╨■Г╚═</a>
