--- a/lyc.html
+++ b/lyc.html
@@ -48,7 +48,7 @@ img{
   </li>
  </ul>
 <img id="placeholder" src="王者荣耀.jpg" alt="my image gallery">
-<script src="javacript.js"></script> 
+<script src=".js"></script> 
 <p id="description">Choose an image.</p>
 </body>
 </html>
